Redux full setup, backend little changes.
