# server/src/routes/user.router.ts
@@ -3,6 +3,7 @@ import UserController from "../controllers/user.controller";
 import jwt from "jsonwebtoken"
 import {User} from "../models/user.entity";
 import {body, validationResult} from 'express-validator';
+import jwtAuth from "../middleware/auth"
 
 
 const router = express.Router()
@@ -18,7 +19,7 @@ router.post("/register", body('email').isEmail(), body("password").isLength({min
 
 router.post("/login", body('email').isEmail(), body("password").isLength({min: 6}), async (req: Request, res: Response) => {
     const errors = validationResult(req)
-    if (!errors.isEmpty()) return res.status(400).json({errors: errors.array()})
+    if (!errors.isEmpty()) return res.json({response: errors.array()})
     const controller = new UserController();
     const response = await controller.loginUser(req.body)
     if (response instanceof User) {
@@ -27,11 +28,23 @@ router.post("/login", body('email').isEmail(), body("password").isLength({min: 6
             .cookie("access_token", token, {
                 httpOnly: true,
                 secure: process.env.NODE_ENV === "production",
+                expires: new Date(Date.now() + 16 * 3600000)
             })
             .status(200)
-            .json({response});
+            .json({token, user: response});
     }
     res.json({response})
+})
+
+router.get("/logout", jwtAuth, async (req: Request, res: Response) => {
+    res.clearCookie("access_token");
+    res.json({message: "Cookie deleted"})
+})
+
+router.get("/user", jwtAuth, async (req: Request, res: Response) => {
+    const controller = new UserController()
+    const response = await controller.currentUser((req as any).id.id)
+    return res.json({response})
 })
 
 export default router
